# kae

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  env.rs  kube.rs  kubernetes.rs  lib.rs  main.rs
src/cmd/: deployment.rs  empty.rs  environment.rs  mod.rs  result.rs
src/kubernetes/: client.rs  mod.rs  ns.rs  secrets.rs
