[package]
name = "kae"
version = "0.1.0"
authors = ["Aaron Schlesinger <aaron@ecomaz.net>"]
edition = "2018"

[dependencies]
kube = {version = "0.16.1", features = ["openapi"]}
k8s-openapi = { version = "0.5.1", default-features = true, features = ["v1_15"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
structopt = "0.3.2"
korq = "0.4.0"
http = "0.1.18"
